# mpd2irc

./: .gitignore  Makefile.am  README  README.md  bootstrap.sh  configure.ac  mpd2irc.conf.example
src/: irc.c  irc.h  m2i.c  mpd.c  mpd.h  mpd2irc.c  preferences.c  preferences.h
